--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,33 @@
-# frontend/Dockerfile
-FROM python:3.10-slim
+FROM python:3.9-slim
 
 WORKDIR /app
 
-# Copier les fichiers requis
+# Installer les dépendances système
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Créer le répertoire des scripts
+RUN mkdir -p /app/scripts
+
+# Copier le script d'attente
+COPY scripts/wait-for-backend.sh /app/scripts/wait-for-backend.sh
+RUN chmod +x /app/scripts/wait-for-backend.sh
+
+# Mettre à jour pip
+RUN pip install --upgrade pip
+
+# Copier les fichiers de dépendances
 COPY requirements.txt .
 
 # Installer les dépendances
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copier le code source
+# Copier les fichiers de l'application
 COPY . .
 
 # Exposer le port
 EXPOSE 8501
 
-# Commande de démarrage
-CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+# Commande pour démarrer l'application
+CMD ["/app/scripts/wait-for-backend.sh"]
