--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,9 +7,17 @@ sqlalchemy==2.0.20
 langchain==0.0.267
 chromadb==0.4.15
 sentence-transformers==2.2.2
+huggingface-hub==0.16.4
 tiktoken==0.5.1
 websockets==11.0.3
-sentence-transformers==2.2.2
-huggingface-hub==0.16.4
 PyPDF2==3.0.1
 pdfminer.six==20221105
+reportlab==3.6.12
+python-docx==0.8.11
+pillow==10.0.0
+matplotlib==3.7.2
+numpy==1.25.2
+aiofiles==23.2.1
+tenacity==8.2.3
+python-dotenv==1.0.0
+loguru==0.7.0
