--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -2,3 +2,10 @@ streamlit==1.26.0
 requests==2.31.0
 pandas==2.1.0
 websocket-client==1.6.3
+matplotlib==3.7.2
+pillow<10
+plotly==5.16.1
+pdf2image==1.16.3
+python-docx==0.8.11
+docx2pdf==0.1.8
+streamlit-chat==0.1.1
