--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: '3'
 
 services:
@@ -17,15 +16,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    # Configuration GPU optionnelle - décommenter si GPU disponible
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [gpu]
-    # Utiliser par défaut sans GPU
     command: serve
 
   # Service backend FastAPI
@@ -43,7 +33,7 @@ services:
     environment:
       - RESET_DB=true
       - OLLAMA_HOST=http://ollama:11434
-      - OLLAMA_MODEL=mistral:7b  # ou llama3:8b
+      - OLLAMA_MODEL=mistral:7b
       - DB_PATH=/app/data
       - VECTOR_DB_PATH=/app/data/vectordb
       - SQLITE_DB_PATH=/app/data/memoire.db
@@ -52,14 +42,16 @@ services:
       - TEMP_PATH=/app/data/temp
       - LOG_LEVEL=INFO
       - ENABLE_WEBSOCKETS=true
+      - ENABLE_HALLUCINATION_DETECTION=true  # Nouvelle variable
     depends_on:
       - ollama
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 20s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
     command: ["/app/scripts/init.sh"]
 
   # Service frontend Streamlit
@@ -106,21 +98,6 @@ services:
                sleep 86400; 
              done"
     restart: unless-stopped
-
-  test:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    volumes:
-      - ./backend:/app
-      - ./test_data:/app/test_data
-    environment:
-      - DB_PATH=/app/test_data
-      - VECTOR_DB_PATH=/app/test_data/vectordb
-      - SQLITE_DB_PATH=/app/test_data/test_memoire.db
-      - EXPORT_PATH=/app/test_data/exports
-      - TEST_MODE=true
-    command: ["pytest", "-xvs"]
 
 volumes:
   ollama_data:
