--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.103.1
 uvicorn==0.23.2
 httpx==0.25.0
 pydantic==2.3.0
+pydantic-settings==2.0.3
 python-multipart==0.0.6
 sqlalchemy==2.0.20
 langchain==0.0.267
